@@ -1,3 +1,9 @@
+2009-04-11  Dominique Dumont  <domi.dumont@free.fr>
+
+	* lib/Config/Model/AutoRead.pm (): Reworked doc. Aligned read and
+	write specs (now have same parameters). Read and write callback
+	are passed an opened file handle if possible.
+
 2009-04-02  Dominique Dumont  <dominique.dumont@hp.com> unreleased v0.635
 
 	* lib/Config/Model.pm (include_one_class): Can no longer clobber
